Phase 5: Dockerization & Docker Compose Integration
- api/Dockerfile: Multi-stage Go 1.23 build → Alpine 3.20 runtime, non-root
  user, curl-based health check on /api/v1/health, -trimpath build
- worker/Dockerfile: 3-stage build (nsjail from source → Go binary → Debian
  runtime with Python 3 + g++), sandbox configs copied to /etc/sentinel/,
  rootfs prepared for nsjail bind-mounts, curl health check on /healthz
- frontend/Dockerfile: Node 20 build → nginx 1.27 serve, external nginx.conf
- frontend/nginx.conf: Gzip, SPA fallback, /api/ + /ws/ reverse proxy to API,
  static asset cache with immutable headers, /nginx-health endpoint
- docker-compose.yml: Full 6-service stack (postgres, rabbitmq, redis, api,
  worker, frontend), all services on shared 'sentinel' bridge network,
  health checks with start_period on every service, depends_on conditions,
  named volumes with local driver, Redis appendonly + LRU eviction
- docker-compose.test.yml: CI override — ephemeral postgres (PGDATA=/tmp),
  no redis persistence, rate limit disabled, integration-test runner service
  using curlimages/curl, --abort-on-container-exit --exit-code-from
- scripts/integration-test.sh: 6 end-to-end tests (Python hello, C++ hello,
  stdin piping, compilation error, runtime error, timeout detection),
  poll-based with 60s timeout, no jq dependency
- scripts/wait-for-service.sh: Generic HTTP health check waiter with timeout
- .dockerignore (root + api/ + frontend/): Exclude node_modules, .git, IDE
  files, build artifacts from Docker build contexts
- Makefile: Added docker-build-{api,worker,frontend}, docker-push, up-infra,
  logs-api, logs-worker, health targets, GHCR registry variables

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,25 +1,28 @@
+# =============================================================================
+# Project Sentinel — API Server Dockerfile
+# Multi-stage build: Go compile → minimal Alpine runtime
+# =============================================================================
+
 # ── Stage 1: Build ──────────────────────────────────────────
-FROM golang:1.22-alpine AS builder
+FROM golang:1.23-alpine AS builder
 
 RUN apk add --no-cache git ca-certificates
 
 WORKDIR /build
 
-# Cache deps
+# Cache Go module downloads (rarely changes)
 COPY go.mod go.sum ./
-RUN go mod download
+RUN go mod download && go mod verify
 
-# Copy source
+# Copy source and build a static binary
 COPY . .
-
-# Build binary
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-    go build -ldflags="-w -s" -o /sentinel-api ./cmd/server
+    go build -trimpath -ldflags="-w -s" -o /sentinel-api ./cmd/server
 
 # ── Stage 2: Runtime ───────────────────────────────────────
-FROM alpine:3.19
+FROM alpine:3.20
 
-RUN apk add --no-cache ca-certificates tzdata && \
+RUN apk add --no-cache ca-certificates tzdata curl && \
     addgroup -S sentinel && \
     adduser -S -G sentinel sentinel
 
@@ -29,7 +32,7 @@ USER sentinel
 
 EXPOSE 8080
 
-HEALTHCHECK --interval=15s --timeout=5s --start-period=5s --retries=3 \
-    CMD wget -qO- http://localhost:8080/health || exit 1
+HEALTHCHECK --interval=10s --timeout=5s --start-period=15s --retries=5 \
+    CMD curl -sf http://localhost:8080/api/v1/health || exit 1
 
 ENTRYPOINT ["sentinel-api"]
