--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,77 +1,36 @@
+# =============================================================================
+# Project Sentinel — Frontend Dockerfile
+# Multi-stage build: Node.js build → nginx static serve
+# =============================================================================
+
 # ── Stage 1: Build ──────────────────────────────────────────
 FROM node:20-alpine AS builder
 
 WORKDIR /app
 
-# Install deps
+# Install dependencies (cache layer)
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN npm ci --prefer-offline
 
 # Copy source and build
 COPY . .
 RUN npm run build
 
 # ── Stage 2: Serve with nginx ─────────────────────────────
-FROM nginx:1.25-alpine
+FROM nginx:1.27-alpine
 
 # Remove default config
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Custom nginx config for SPA
-COPY <<'EOF' /etc/nginx/conf.d/sentinel.conf
-server {
-    listen 80;
-    server_name _;
-    root /usr/share/nginx/html;
-    index index.html;
+# Copy custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/sentinel.conf
 
-    # Gzip
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript image/svg+xml;
-    gzip_min_length 256;
-
-    # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # SPA fallback — serve index.html for all routes
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # API proxy (if not using ingress)
-    location /api/ {
-        proxy_pass http://sentinel-api:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # WebSocket proxy
-    location /ws/ {
-        proxy_pass http://sentinel-api:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_read_timeout 86400;
-    }
-
-    # Health check
-    location /nginx-health {
-        access_log off;
-        return 200 "ok\n";
-        add_header Content-Type text/plain;
-    }
-}
-EOF
-
-# Copy built assets
+# Copy built assets from builder
 COPY --from=builder /app/dist /usr/share/nginx/html
 
 EXPOSE 80
 
-HEALTHCHECK --interval=15s --timeout=3s --start-period=5s --retries=3 \
+HEALTHCHECK --interval=10s --timeout=3s --start-period=5s --retries=3 \
     CMD wget -qO- http://localhost/nginx-health || exit 1
+
+CMD ["nginx", "-g", "daemon off;"]
